# keepyer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
docs/: claude-gateway.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: AddKeyModal.tsx  AddProviderModal.tsx  EmptyState.tsx  LanguageSwitcher.tsx  MainContent.tsx  ModelsModal.tsx  Sidebar.tsx
src/domains/chat/components/: DebugChatModal.tsx
src/domains/chat/lib/: codex-exec.ts  llm-proxy.ts  security-probe.ts
src/domains/gateway/components/: GatewayDashboard.tsx
src/domains/gateway/lib/: config-builder.ts  gateway-runtime.ts
src/domains/keys/components/: AddKeyModal.tsx  KeyCard.tsx  ModelsModal.tsx
src/domains/keys/lib/: api-test.ts
src/domains/providers/components/: AddProviderModal.tsx  ProviderDashboard.tsx  ProviderEmptyState.tsx  ProviderSidebar.tsx
src/domains/settings/components/: AuthModal.tsx  PasswordSetupModal.tsx  SettingsModal.tsx
src/domains/settings/lib/: import-export.ts  secure-storage.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/shared/components/: DeleteConfirmModal.tsx  LanguageSwitcher.tsx  ToastHost.tsx
src/shared/lib/: cn.ts  codex.ts  helpers.ts  prompts.ts  storage.ts  toast.ts  token-usage.ts
src/store/: index.ts
src/types/: index.ts  tauri.d.ts
src/utils/: api-test.ts  helpers.ts  import-export.ts
